--- a/Dockerfile.ollama
+++ b/Dockerfile.ollama
@@ -1,14 +1,14 @@
 # Dockerfile pentru Ollama cu modelul llama3.2:1b
 FROM ollama/ollama:latest
 
-# Setăm variabile de mediu
+# Setam variabile de mediu
 ENV OLLAMA_HOST=0.0.0.0
 ENV OLLAMA_PORT=11434
 
 # Expunem portul
 EXPOSE 11434
 
-# Copiem scriptul de inițializare
+# Copiem scriptul de initializare
 COPY docker/ollama-init.sh /usr/local/bin/ollama-init.sh
 RUN chmod +x /usr/local/bin/ollama-init.sh
 
